fix(styles): form mis-alignments (#3256)
* fix(styles): removed unnecessary shadow

* fix(styles): fixed styles mis-alignments

* feat(styles): form-layout mis-alignments fixes

* fix(styles): removed unnecessary padding when label was not required

* chore(ci): run [ci visual]

* fix(styles): fixed incorrect side margins [ci visual]

--- a/src/styles/form-header.scss
+++ b/src/styles/form-header.scss
@@ -17,7 +17,7 @@ $fd-form-header-padding-x: 1rem !default;
   background-color: var(--sapGroup_TitleBackground);
   padding-left: $fd-form-header-padding-x;
   padding-right: $fd-form-header-padding-x;
-  box-shadow: 0 var(--fdFormHeader_Border_Width) var(--fdFormHeader_Border_Width) var(--sapGroup_TitleBorderColor);
+  box-shadow: 0 var(--fdFormHeader_Border_Width) 0 var(--sapGroup_TitleBorderColor);
 
   &__text {
     @include fd-reset();
